--- a/server/client/src/modules/styles.css
+++ b/server/client/src/modules/styles.css
@@ -60,6 +60,24 @@
   transition: all 175ms ease-in-out;
 }
 
+.content__wrapper {
+  background-color: #ffff;
+  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox; /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Chrome */
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+}
+
+.text-medium__body {
+  margin-top: 0em !important;
+  margin-bottom: 0em !important;
+  padding-top: 0.07em;
+  font-size: medium;
+}
+
 @keyframes expand {
   from {
     transform: scale(1);
