audio streaming now working inside screen.js

--- a/server/client/src/components/readable/styles.css
+++ b/server/client/src/components/readable/styles.css
@@ -6,3 +6,23 @@
   margin-inline-end: 0px;
   padding: 0.3vw;
 }
+
+.bookContents__theme-success {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding: 0.3vw;
+  background-color: green;
+}
+
+.bookContents__theme-fail {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding: 0.3vw;
+  background-color: red;
+}
