Microphone streaming broken up into its own utility
- microphone streaming can be toggled with button
- toggling doesnt break the server now

TODO: need to fix the 'rapid' responces getting sent by the server for every second streaming

--- a/server/client/src/modules/reading/styles.css
+++ b/server/client/src/modules/reading/styles.css
@@ -6,3 +6,11 @@
   flex-wrap: wrap;
   max-width: 80vw;
 }
+
+.reading-content-components__wrapper {
+  background-color: inherit;
+  display: -webkit-flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  min-width: 100vw;
+}
