--- a/server/client/src/components/login/styles.css
+++ b/server/client/src/components/login/styles.css
@@ -37,7 +37,21 @@
   display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
   display: -ms-flexbox; /* TWEENER - IE 10 */
   display: -webkit-flex; /* NEW - Chrome */
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.description-icons__wrap {
+  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox; /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Chrome */
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.text-description__wrap {
+  max-width: 600px;
 }
