--- a/client/src/components/readable/styles.css
+++ b/client/src/components/readable/styles.css
@@ -14,7 +14,7 @@
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   padding: 0.3vw;
-  background-color: green;
+  background-color: rgba(41, 165, 33, 0.24);
 }
 
 .bookContents__theme-fail {
@@ -24,5 +24,5 @@
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   padding: 0.3vw;
-  background-color: red;
+  background-color: rgba(255, 144, 0, 0.32);
 }
