--- a/client/src/components/reading-status/styles.css
+++ b/client/src/components/reading-status/styles.css
@@ -1,13 +1,36 @@
-.reading-status__container {
-  padding: 20px;
-  background-color: #04528d;
+.reading-status-content__container {
   border-radius: 25px;
   display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
   display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
   display: -ms-flexbox; /* TWEENER - IE 10 */
   display: -webkit-flex; /* NEW - Chrome */
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
+  width: 60px;
+  height: 60px;
+  padding: 1px 6px;
+  background-color: #707dfd;
+  border-color: #707dfd;
+  -moz-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.reading-status-content__container-margin {
+  margin-right: 0.4vw;
+}
+
+.reading-status-content__wrapper {
+  align-self: center;
+}
+
+.reading-status-content__padding {
+  padding-right: 0.2em;
+}
+
+.reading-status-text {
+  color: white;
 }
 
 .reading-status__wrapper {
@@ -15,5 +38,16 @@
   display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
   display: -ms-flexbox; /* TWEENER - IE 10 */
   display: -webkit-flex; /* NEW - Chrome */
-  flex-direction: column;
+  flex-direction: row;
+  align-self: center;
+}
+
+.correct-colorFlash {
+  background-color: #29a521;
+  border-color: #29a521;
+}
+
+.incorrect-colorFlash {
+  background-color: #ff9000;
+  border-color: #ff9000;
 }
