--- a/client/src/modules/reading/styles.css
+++ b/client/src/modules/reading/styles.css
@@ -31,3 +31,14 @@
 .reading-button__padding {
   padding: 0.5em;
 }
+
+.reading-status__container {
+  position: absolute;
+  right: 0;
+  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox; /* TWEENER - IE 10 */
+  display: -webkit-flex; /* NEW - Chrome */
+  flex-direction: row;
+  padding-right: 13vw;
+}
