Modal displays syllables according to threshold
refs #36

Changes:
 - Modal now displays the 2-letter syllables/letter combinations of the incorrect word selected

--- a/client/src/components/readable/styles.css
+++ b/client/src/components/readable/styles.css
@@ -31,6 +31,34 @@
   position: relative;
 }
 
+.bookContents__theme-syllable-focused {
+  display: inline-block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  margin: 0.3vw;
+  font-weight: bolder;
+  position: relative;
+  font-size: x-large;
+  border-bottom: 2px solid #5f6a7d;
+}
+
+.bookContents__theme-syllable-unfocused {
+  display: inline-block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  margin: 0.3vw;
+  position: relative;
+  -webkit-filter: blur(1px);
+  -moz-filter: blur(1px);
+  -ms-filter: blur(1px);
+  -o-filter: blur(1px);
+  filter: blur(1px);
+}
+
 .bookContents__theme-fail::before {
   content: '';
   position: absolute;
@@ -50,6 +78,7 @@
 }
 
 .bookContents__theme-fail:hover {
+  cursor: pointer;
   transform: scale(1.09);
   transition: all 190ms ease-in-out;
   background-color: #29a521;
