\fix Exess Speech API calles
refs #36

Changes:
 - Readable comoonent no longer making exess API calles when user is viewing modal
 - SpeechUtility refacrored, impoved performance by caching incorrectWordRange between checks
 - Streamlined modal syllables, now only displays focused elements

--- a/client/src/components/reading-status/styles.css
+++ b/client/src/components/reading-status/styles.css
@@ -9,8 +9,8 @@
   width: 60px;
   height: 60px;
   padding: 1px 6px;
-  background-color: #707dfd;
-  border-color: #707dfd;
+  background-color: #04528d;
+  border-color: #04528d;
   -moz-transition: all 0.4s ease-in-out;
   -o-transition: all 0.4s ease-in-out;
   -webkit-transition: all 0.4s ease-in-out;
