\fix rounded-corners on reading screen now consistant with rest of app

--- a/client/src/containers/reading/styles.css
+++ b/client/src/containers/reading/styles.css
@@ -7,6 +7,10 @@
   max-width: 80vw;
 }
 
+.readable-content__corners {
+  border-radius: .25rem;
+}
+
 .reading-content-components__wrapper {
   background-color: inherit;
   display: -webkit-flex;
